--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amir-Abbas Alvand | CS Student & ML Enthusiast</title>
+    <title>Amir-Abbas Alvand | Portfolio</title>
     <style>
         :root {
-            --primary-color: #55E100;
-            --secondary-color: #1a1a1a;
+            --primary-color: #00bcd4; /* A professional teal color */
+            --secondary-color: #121212;
             --text-color: #e0e0e0;
             --header-color: #ffffff;
-            --card-bg-color: #2a2a2a;
+            --card-bg-color: #1e1e1e;
         }
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
             margin: 0;
             background-color: var(--secondary-color);
             color: var(--text-color);
-            line-height: 1.6;
+            line-height: 1.7;
         }
         .container {
             max-width: 1000px;
@@ -27,39 +27,36 @@
         header {
             text-align: center;
             padding: 60px 20px;
-            background-color: #111;
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover;
         }
         header h1 {
-            font-size: 3em;
+            font-size: 3.2em;
             color: var(--header-color);
             margin: 0;
-        }
-        header .typing-img {
-            margin-top: 10px;
+            font-weight: 700;
         }
         header p {
             font-size: 1.2em;
             color: var(--primary-color);
+            margin-top: 10px;
         }
+        .social-links { margin-top: 25px; }
         .social-links a {
             color: var(--header-color);
             margin: 0 15px;
             text-decoration: none;
-            font-size: 1.2em;
+            font-size: 1.1em;
+            transition: color 0.3s;
         }
-        .social-links a:hover {
-            color: var(--primary-color);
-        }
-        section {
-            padding: 60px 20px;
-            border-bottom: 1px solid #333;
-        }
+        .social-links a:hover { color: var(--primary-color); }
+        section { padding: 60px 20px; border-bottom: 1px solid #333; }
         h2 {
             text-align: center;
             font-size: 2.5em;
             color: var(--header-color);
-            margin-bottom: 40px;
+            margin-bottom: 50px;
             text-transform: uppercase;
+            letter-spacing: 2px;
         }
         .card {
             background: var(--card-bg-color);
@@ -67,68 +64,59 @@
             margin-bottom: 20px;
             border-radius: 8px;
             border-left: 4px solid var(--primary-color);
+            transition: transform 0.3s;
         }
+        .card:hover { transform: translateY(-5px); }
         .card h3 {
             margin-top: 0;
+            color: var(--primary-color);
+            font-size: 1.6em;
+        }
+        .card .date { color: #aaa; font-style: italic; }
+        .card p, .card ul { margin: 10px 0 0; padding-left: 20px; }
+        .card ul li { margin-bottom: 8px; }
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+        .skill-category h4 {
             color: var(--header-color);
-            font-size: 1.5em;
+            border-bottom: 2px solid var(--primary-color);
+            padding-bottom: 5px;
         }
-        .card .date {
-            color: #aaa;
-            font-style: italic;
+        .skill-category span {
+            display: inline-block;
+            background-color: #333;
+            padding: 5px 12px;
+            margin: 5px;
+            border-radius: 5px;
         }
-        .card p {
-            margin: 10px 0 0;
-        }
-        .skills-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-        }
-        .skill-tag {
-            background-color: var(--card-bg-color);
-            padding: 10px 20px;
-            border-radius: 20px;
-            font-weight: bold;
-            color: var(--text-color);
-        }
-        #contact {
-            text-align: center;
-        }
+        #contact { text-align: center; }
         .button {
             display: inline-block;
             background-color: var(--primary-color);
-            color: #111;
-            padding: 12px 25px;
+            color: #fff;
+            padding: 15px 30px;
             border-radius: 5px;
             text-decoration: none;
             font-weight: bold;
             margin-top: 20px;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.3s;
         }
-        .button:hover {
-            background-color: #fff;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #111;
-        }
+        .button:hover { background-color: #00acc1; transform: scale(1.05); }
+        footer { text-align: center; padding: 20px; background-color: #111; font-size: 0.9em; }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Amir-Abbas Alvand</h1>
-        <div class="typing-img">
-             <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&size=18&pause=1000&color=FFFFFF&center=true&vCenter=true&width=435&lines=Computer+Science+Student;Machine+Learning+Enthusiast;Data+Explorer" alt="Typing SVG" />
-        </div>
-        <p>"Code is poetry written in logic."</p>
+        <h1>Amir-Abbas Alvand </h1>
+        <p>Computer Science Student | Machine Learning & Bioinformatics Enthusiast </p>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/amir-abbas-alvand-22656b204/" target="_blank">LinkedIn</a> |
-            <a href="https://github.com/amiralv82" target="_blank">GitHub</a> |
-            <a href="https://t.me/Amir_Alvand" target="_blank">Telegram</a>
+            <a href="https://github.com/amiralvand" target="_blank">GitHub</a> |
+            <a href="mailto:amir.alvand96@yahoo.com">Email</a>
         </div>
     </header>
 
@@ -137,36 +125,43 @@
         <section id="about">
             <h2>About Me</h2>
             <p style="text-align: center; max-width: 800px; margin: 0 auto 20px;">
-                I am a final-year Computer Science student at Amirkabir University of Technology with a deep passion for Artificial Intelligence. My journey in tech is driven by a love for solving complex problems, whether it's by exploring classical ML algorithms or architecting modern neural networks. I am passionate about mathematics, clean code, and transforming data into compelling stories.
+                A final-year Computer Science student at Amirkabir University of Technology with a GPA of 3.8/4. My core research interests lie in Data Science, specifically Machine Learning, Deep Learning, and Bioinformatics. I am passionate about leveraging data-driven models to solve complex problems and continuously expanding my knowledge through challenging projects and advanced coursework.
             </p>
         </section>
 
         <section id="experience">
             <h2>Experience</h2>
             <div class="card">
-                <h3>Machine Learning Engineer (Intern)</h3>
-                <p><strong>MECO (MAPNA Electric & Control)</strong></p>
-                <p class="date">Fall 2023</p>
+                <h3>Research Assistant </h3>
+                <p><strong>Data-Driven Models Lab, Amirkabir University of Technology</strong></p>
+                <p class="date">2024 - Ongoing </p>
                 <ul>
-                    <li>Developed a Persian voice assistant for smart homes using NLP classification models.</li>
-                    <li>Built a custom dataset and trained models for intent recognition.</li>
+                    <li>Under the supervision of Dr. Fatemeh Shakeri, predicting Cancer Y based on Cancer X using bioinformatics and machine learning.</li>
+                    <li>Responsibilities include data preprocessing, model selection, and feature engineering.</li>
                 </ul>
             </div>
             <div class="card">
-                <h3>Research Assistant</h3>
-                <p><strong>Amirkabir University of Technology</strong></p>
-                <p class="date">2024 - Ongoing</p>
+                <h3>Machine Learning Engineer (Intern) </h3>
+                <p><strong>MECO (MAPNA Electric & Control) </strong></p>
                 <ul>
-                    <li>Predicting Cancer Y based on Cancer X using bioinformatics and machine learning under the supervision of Dr. Fatemeh Shakeri.</li>
-                    <li>Conducting data preprocessing, model selection, and feature engineering.</li>
+                    <li>Developed a Persian voice assistant for smart homes utilizing NLP classification models.</li>
+                    <li>Built a custom dataset and trained models for intent recognition, supervised by Hossein Shahabadi Farahani.</li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3>Teaching Assistant</h3>
+                <p><strong>Amirkabir University of Technology</strong></p>
+                <p class="date">Fall 2023 - Fall 2024</p>
+                <ul>
+                    <li>Assisted in courses including Data Structures & Algorithms, Artificial Intelligence, Operating Systems, and Numerical Analysis.</li>
+                    <li>Duties involved designing syllabi, creating reading materials, grading exams, designing projects, and assisting in lesson planning.</li>
                 </ul>
             </div>
              <div class="card">
-                <h3>Head Manager - Halghe Magazine</h3>
-                <p><strong>Amirkabir University of Technology</strong></p>
-                <p class="date">2023 - Ongoing</p>
+                <h3>Leadership & Management</h3>
                 <ul>
-                    <li>Managing editorial content and publication strategies for the Persian Student Scientific Magazine.</li>
+                    <li><strong>Head Manager, Halghe Magazine :</strong> Managing editorial content and publication strategies for a Persian Student Scientific Magazine at Amirkabir University. (2023 - Ongoing) </li>
+                    <li><strong>Director of Engineering, Gereh Circles :</strong> Led engineering initiatives, managed technical projects, and conducted Python mentoring sessions. (Jan 2022 - May 2023) </li>
                 </ul>
             </div>
         </section>
@@ -174,65 +169,77 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="card">
-                <h3>Grep Implementation in Rust</h3>
-                <p class="date">Fall 2023</p>
-                <p>Developed a high-performance implementation of the Linux 'grep' command using Rust, focusing on efficiency and performance optimization.</p>
+                <h3>Grep Implementation in Rust </h3>
+                <p class="date">Fall 2023 </p>
+                <p>Developed a performance-optimized version of the Linux Grep command using the Rust programming language.</p>
             </div>
             <div class="card">
-                <h3>Kakuro Solver</h3>
-                <p class="date">Fall 2023</p>
-                <p>Solved complex Kakuro puzzles by implementing constraint satisfaction and meta-heuristic algorithms in Python.</p>
+                <h3>Kakuro Solver </h3>
+                <p class="date">Fall 2023 </p>
+                <p>Solved Kakuro puzzles using constraint satisfaction and meta-heuristic algorithms in Python.</p>
             </div>
             <div class="card">
-                <h3>Credit Card Fraud Detection</h3>
-                <p class="date">Fall 2023</p>
-                <p>Implemented K-Means and SVM algorithms to detect fraudulent transactions from a large Kaggle dataset.</p>
+                <h3>Credit Card Fraud Detection </h3>
+                <p class="date">Fall 2023 </p>
+                <p>Implemented K-Means & SVM models in Python for fraud detection on a Kaggle dataset.</p>
             </div>
         </section>
 
         <section id="education">
-            <h2>Education & Coursework</h2>
+            <h2>Education</h2>
             <div class="card">
-                <h3>Amirkabir University of Technology</h3>
-                <p><strong>Bachelor in Computer Science</strong> (2021 - Ongoing)</p>
-                <p>Current GPA: 3.8/4</p>
-                <p><strong>Key Coursework:</strong> Artificial Intelligence (20/20), Data Mining (19.93/20), Database (19.75/20), Image Processing (19.83/20), Data Structures & Algorithms (19.7/20).</p>
+                <h3>Amirkabir University of Technology </h3>
+                <p><strong>Bachelor in Computer Science </strong> (2021 - Ongoing) </p>
+                <p><strong>Select Coursework Scores:</strong></p>
+                <ul>
+                   <li>Artificial Intelligence: 20/20 </li>
+                   <li>Principles of Software Design: 20/20 </li>
+                   <li>Image Processing: 19.83/20 </li>
+                   <li>Data Mining: 19.93/20 </li>
+                   <li>Database: 19.75/20 </li>
+                   <li>Data Structures & Algorithms: 19.7/20 </li>
+                </ul>
             </div>
              <div class="card">
-                <h3>Graduate Level Courses</h3>
-                <p>Machine Learning Specialization (Stanford University, Online) & CS50 (Harvard University, Online)</p>
+                <h3>Graduate Courses & Certifications </h3>
+                <ul>
+                    <li>Machine Learning Specialization - Stanford University, Online </li>
+                    <li>CS50 - Harvard University, Online </li>
+                </ul>
             </div>
         </section>
 
         <section id="skills">
             <h2>Skills</h2>
-            <div class="skills-container">
-                <span class="skill-tag">Python</span>
-                <span class="skill-tag">Java</span>
-                <span class="skill-tag">C/C++</span>
-                <span class="skill-tag">Rust</span>
-                <span class="skill-tag">Machine Learning</span>
-                <span class="skill-tag">NLP</span>
-                <span class="skill-tag">Data Mining</span>
-                <span class="skill-tag">Scikit-learn</span>
-                <span class="skill-tag">Pandas</span>
-                <span class="skill-tag">TensorFlow/PyTorch</span>
-                <span class="skill-tag">Linux</span>
-                <span class="skill-tag">Git</span>
-                <span class="skill-tag">SQL</span>
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h4>Programming </h4>
+                    <span>Python</span><span>Java</span><span>C/C++</span><span>Rust</span>
+                </div>
+                <div class="skill-category">
+                    <h4>Data Science </h4>
+                    <span>Machine Learning</span><span>NLP</span><span>Data Mining</span><span>Scikit-learn</span><span>Pandas</span>
+                </div>
+                 <div class="skill-category">
+                    <h4>Tools </h4>
+                    <span>Linux</span><span>Git</span><span>SQL</span><span>TensorFlow/PyTorch (Basic)</span>
+                </div>
+                 <div class="skill-category">
+                    <h4>Languages </h4>
+                    <span>Persian (Mother tongue)</span><span>English (Advanced)</span>
+                </div>
             </div>
         </section>
 
         <section id="contact">
-            <h2>Get In Touch</h2>
-            <p>I'm always open to discussing new projects, research, or opportunities. Feel free to reach out!</p>
-            <a href="mailto:amir.alvand96@yahoo.com" class="button">Email Me</a>
+            <h2>Contact</h2>
+            <p>I am actively seeking new opportunities and collaborations. Feel free to get in touch.</p>
+            <a href="mailto:amir.alvand96@yahoo.com" class="button">Email Me </a>
         </section>
-
     </div>
 
     <footer>
-        <p>&copy; 2025 Amir-Abbas Alvand. All Rights Reserved.</p>
+        <p>&copy; 2025 Amir-Abbas Alvand | Tehran, Iran </p>
     </footer>
 
 </body>
