--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
 
     <header>
         <h1>Amir-Abbas Alvand </h1>
-        <p>Computer Science Student | Machine Learning & Bioinformatics Enthusiast </p>
+        <p>Computer Science Student | AI & Bioinformatics Enthusiast </p>
         <div class="social-links">
+            <a href="https://www.t.mt/Amir_Alvand/" target="_blank">Telegram</a> |
             <a href="https://www.linkedin.com/in/amir-abbas-alvand-22656b204/" target="_blank">LinkedIn</a> |
             <a href="https://github.com/amiralvand" target="_blank">GitHub</a> |
             <a href="mailto:amir.alvand96@yahoo.com">Email</a>
@@ -214,15 +215,15 @@
             <div class="skills-grid">
                 <div class="skill-category">
                     <h4>Programming </h4>
-                    <span>Python</span><span>Java</span><span>C/C++</span><span>Rust</span>
+                    <span>Python</span><span>Java</span><span>C/C++</span><span>Rust</span><span>Javascript</span><span>React</span>
                 </div>
                 <div class="skill-category">
                     <h4>Data Science </h4>
-                    <span>Machine Learning</span><span>NLP</span><span>Data Mining</span><span>Scikit-learn</span><span>Pandas</span>
+                    <span>Machine Learning</span><span>NLP</span><span>Data Mining</span><span>Scikit-learn</span><span>Pandas</span><span>Deep Learning</span><span>Image Processing</span>
                 </div>
                  <div class="skill-category">
                     <h4>Tools </h4>
-                    <span>Linux</span><span>Git</span><span>SQL</span><span>TensorFlow/PyTorch (Basic)</span>
+                    <span>Linux</span><span>Git</span><span>SQL</span><span>TensorFlow/PyTorch</span>
                 </div>
                  <div class="skill-category">
                     <h4>Languages </h4>
