--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
             </div>
             <div class="card">
                 <h3>Teaching Assistant</h3>
-                <p><strong>Amirkabir University of Technology</strong></p>
-                <p class="date">Fall 2023 - Fall 2024</p>
                 <ul>
-                    <li>Assisted in courses including Data Structures & Algorithms, Artificial Intelligence, Operating Systems, and Numerical Analysis.</li>
-                    <li>Duties involved designing syllabi, creating reading materials, grading exams, designing projects, and assisting in lesson planning.</li>
+                    <li><strong>Data Structures & Algorithms</strong> (Fall 2023, Fall 2024) with <a href="https://scholar.google.com/citations?user=s0rc9DQAAAAJ&hl=en" target="_blank">Dr. Zahra Ghorbanali</a>.</li>
+                    <li><strong>Artificial Intelligence & Workshop</strong> (Spring 2024, Fall 2024) with <a href="https://scholar.google.com/citations?user=b7lfEJwAAAAJ&hl=en" target="_blank">Dr. Mehdi Ghatee</a>.</li>
+                    <li><strong>Principles of Operating Systems</strong> (Spring 2024) with <a href="https://scholar.google.com/citations?user=s0rc9DQAAAAJ&hl=en" target="_blank">Dr. Zahra Ghorbanali</a>.</li>
+                    <li><strong>Foundation of Numerical Analysis</strong> (Fall 2024) with <a href="https://scholar.google.com/citations?user=5zZa0ekAAAAJ&hl=en" target="_blank">Dr. Mostafa Shamsi</a>.</li>
                 </ul>
             </div>
              <div class="card">
